refact: Enhance configuration and security measures across the application
- Updated env.example to include more descriptive keys and placeholders for Supabase, MercadoPago, and database configurations.
- Added security headers in next.config.mjs to improve application security against common vulnerabilities.
- Implemented rate limiting in various API routes to prevent abuse and enhance performance.
- Improved input sanitization in user-related API routes to ensure data integrity and security.
- Enhanced error handling and logging in the MercadoPago webhook and user profile management routes for better traceability.

--- a/env.example
+++ b/env.example
@@ -1,33 +1,19 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# MercadoPago
-MERCADOPAGO_ACCESS_TOKEN=your-access-token
-MERCADOPAGO_WEBHOOK_SECRET=your-webhook-secret
-
-# Application
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# AI / Gemini
-GEMINI_API_KEY=your-gemini-api-key
+# Gemini AI Configuration
+GEMINI_API_KEY=your-gemini-api-key-here
 GEMINI_MODEL=gemini-2.5-flash-lite
 
-# Security
-JWT_SECRET=your-jwt-secret
-ENCRYPTION_KEY=your-encryption-key
-INTERNAL_API_SECRET=your-internal-api-secret-change-this
+# MercadoPago Configuration
+MERCADOPAGO_ACCESS_TOKEN=APP_USR-your-access-token-here
+MERCADOPAGO_PUBLIC_KEY=APP_USR-your-public-key-here
+MERCADOPAGO_WEBHOOK_SECRET=your-webhook-secret-here
 
-# Email (opcional para notificações)
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your-email@example.com
-SMTP_PASS=your-password
-SMTP_FROM=noreply@example.com
-
-# Analytics (opcional)
-NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
-
-# Rate Limiting
-RATE_LIMIT_PER_MINUTE=60
+# Database (Optional - if using Postgres directly)
+POSTGRES_URL=postgresql://user:password@host:port/database
+POSTGRES_URL_NON_POOLING=postgresql://user:password@host:port/database
+POSTGRES_USER=your-postgres-user
+POSTGRES_PASSWORD=your-postgres-password
